--- a/LaeArve/Temple/Flask/html.html
+++ b/LaeArve/Temple/Flask/html.html
@@ -1,8 +1,12 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>{{title}}</title>
-    </head>
-    <body>
-        {{body}}
-    </body>
+<head>
+<meta charset="utf-8" />
+<title>Laegna Math Website{% if title %} {% endif %}{{ title }}</title>
+</head>
+<body>
+<p>{{ header }}</p>
+<p>{{ fullcontent }}</p>
+<p>{{footer}}</p>
+</body>
 </html>
